# bytewax

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.release  README.md  justfile  pyproject.toml  rust-toolchain.toml  stubgen.py
.github/workflows/: CD.yml  CI.yml  benches.yml
docs/decisions/: 0001-abi3-wheels.md
docs/guide/contributing/: local-development.md  release.md
docs/guide/deployment/: container.md
docs/guide/getting-started/: installing.md
pysrc/bytewax/: run.py  visualize.py
pysrc/bytewax/connectors/kafka/: __init__.py  operators.py  serde.py
pysrc/bytewax/operators/: __init__.py
pytests/: conftest.py  test_inputs.py  test_run.py  test_visualize.py
pytests/connectors/: test_kafka.py
pytests/operators/: test_branch.py
requirements/: build-py3.10.txt  build-py3.13.txt  build.in  dev.in  dev.txt  doc.in  doc.txt  lib-py3.10.txt  lib-py3.13.txt
src/: errors.rs  inputs.rs  operators.rs  outputs.rs  pyo3_extensions.rs  run.rs
