[project]
name = "bytewax"
dynamic = ["version"]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "typing_extensions>=4",
    "prometheus-client>=0.18"
]

extras = [
    "kafka",
]

[project.optional-dependencies]
kafka = [
    "requests>=2.0",
    "fastavro>=1.9.5",
    # `[schemaregistry]` pulls in httpx etc. — confluent-kafka split these out
    # of the base wheel, and our docs use `confluent_kafka.schema_registry.*`.
    "confluent-kafka[schemaregistry]>=2.5",
]

[project.urls]
"Source Code" = "https://github.com/bytewax/bytewax"
Issues = "https://github.com/bytewax/bytewax/issues"
Documentation = "https://docs.bytewax.io/"
Changelog = "https://github.com/bytewax/bytewax/blob/main/CHANGELOG.md"

[metadata]
long_description = "file: README.md"
long_description_content_type = "text/markdown"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "bytewax._bytewax"
python-source = "pysrc"

[tool.pytest.ini_options]
addopts = "-v"
# Hard cap on per-test runtime so a hung fixture (e.g. testcontainers,
# external service) doesn't burn CI for hours. Tests that legitimately
# need more time can override with `@pytest.mark.timeout(N)`.
timeout = 60

[tool.coverage.run]
source = ["pysrc/bytewax"]
branch = true
# `_bytewax` is the Rust extension; coverage doesn't apply.
omit = ["pysrc/bytewax/_bytewax.pyi"]

[tool.coverage.report]
# Show lines not exercised by any test.
show_missing = true
# Don't count idiomatic-but-uncoverable lines as misses.
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]

[tool.mypy]
# TODO: Turn this on to typecheck all tests.
# check_untyped_defs = true
# TODO: Also consider
# disallow_untyped_calls = true

# TODO: See if we can get
# https://github.com/benbenbang/types-confluent-kafka fixed up to work
# here.
[[tool.mypy.overrides]]
module = "confluent_kafka.*"
ignore_missing_imports = true

# TODO: pre-existing type debt — `KafkaSourceMessage.topic` is `Optional[str]`
# but `confluent-kafka>=2.14`'s stubs require non-None for `SerializationContext`.
# Tighten the connector types (likely change `topic` to `str` and validate at
# construction) and remove this override.
[[tool.mypy.overrides]]
module = "bytewax.connectors.kafka.*"
ignore_errors = true

# TODO: pre-existing type debt — newer typeshed's `ast` stubs are stricter
# about list invariance (e.g. `list[Constant]` vs `list[expr]`). The fixes
# are mechanical (`cast(...)` or restructuring builders). Build-time tool
# only; not shipped.
[[tool.mypy.overrides]]
module = "stubgen"
ignore_errors = true

[[tool.mypy.overrides]]
module = "jsonpickle.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "river.*",
    "fake_web_events.*",
    "pyarrow.*",
    "aiohttp_sse_client.*",
    "testcontainers.*",
]
ignore_missing_imports = true

[tool.ruff.lint]
select = [
    "A",
    "B",
    "D",
    "DTZ",
    "E",
    "EM",
    "F",
    "I",
    "PL",
    "W",
]
ignore = [
    "D105",
    "E731",
    "PLR",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.per-file-ignores]
"examples/*.py" = ["D"]
"pytests/test_flows/*.py" = ["D"]
"test_*.py" = ["D"]
# Because it has huge literals in it.
"pytests/test_visualize.py" = ["E501"]
